@@ -84,27 +84,13 @@ CURRENT RELEASE NOTES:
 RELEASE SHOWSTOPPERS:
 
 
+
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  * prefork MPM: Run cleanups for final request when process exits gracefully.
-    PR: 43857
-    Trunk patch: http://svn.apache.org/viewvc?rev=943650&view=rev
-    2.2.x patch: Trunk patch works
-    (on hold) +1: trawick, rjung, wrowe
-    jorton points out that the problem symptom was probably the reslist
-    issue, which may have a better fix; also, this change could hide 
-    other problems:
-      http://www.mail-archive.com/dev@apr.apache.org/msg23090.html
-    wrowe adds that the pre_cleanup registration is not in apr-util 1.3, it was
-    never backported, and that if this patch works, it's probably the best solve
-    for legacy 2.2.
-    jorton's requested footnotes for backport are at
-      http://mail-archives.apache.org/mod_mbox/httpd-dev/201010.mbox/%3C20101007095048.GA5423@redhat.com%3E
-      [/NOT/i redundant]
 
 
- PATCHES PROPOSED TO BACKPORT FROM TRUNK:
+PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
  * unixd: set suexec_enabled correctly when httpd is run by non-root
