@@ -679,6 +679,11 @@ static void child_main(int child_num_arg)
             die_now = 1;
         }
     }
+    /* This apr_pool_clear call is redundant, should be redundant, but compensates
+     * a flaw in the apr reslist code.  This should be removed once that flaw has
+     * been addressed.
+     */
+    apr_pool_clear(ptrans);
     clean_child_exit(0);
 }
 
